[package]
name = "pruebaark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arkworks-utils = "1.0.1"
ark-ff = "0.4.0-alpha.1"
ark-bls12-377 = "0.3.0"
ark-bls12-381 = "0.3.0"
ark-std = "0.3.0"
rand = "0.8.5"
